--- a/PiClimate.Monitor.WebAssembly/Pages/Components/UpdateButton.razor.css
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/UpdateButton.razor.css
@@ -34,7 +34,7 @@
   height: 1.2rem;
   margin: -0.6rem;
   content: "";
-  z-index: 100;
+  z-index: var(--z-control);
 }
 
 .update-icon::after
@@ -51,5 +51,5 @@
   transform: rotate(45deg);
   margin: 0.25rem -0.15rem;
   content: "";
-  z-index: 101;
+  z-index: var(--z-control);
 }
