--- a/PiClimate.Monitor.WebAssembly/Pages/Status.razor.css
+++ b/PiClimate.Monitor.WebAssembly/Pages/Status.razor.css
@@ -6,6 +6,57 @@
   Copyright © 2020-2021 Maxim Yudin <stibiu@yandex.ru>
  */
 
+.empty::before,
+.failed::before
+{
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  visibility: visible !important;
+  content: "";
+  z-index: var(--z-notice);
+}
+
+.empty::after,
+.failed::after
+{
+  display: block;
+  position: absolute;
+  top: calc(50% - 0.8em);
+  left: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.5em;
+  visibility: visible !important;
+  content: "";
+  z-index: var(--z-notice);
+}
+
+.empty::after
+{
+  color: darkcyan;
+  content: attr(data-empty-notice);
+}
+
+.failed::after
+{
+  color: darkred;
+  content: attr(data-failed-notice) !important;
+}
+
+/*noinspection CssInvalidPseudoSelector*/
+.loading ::deep *,
+.failed ::deep *,
+.empty ::deep *
+{
+  display: none;
+  visibility: collapse;
+}
+
 .text-date
 {
   color: var(--dark-time-color) !important;
@@ -26,41 +77,24 @@
   color: var(--dark-humidity-color) !important;
 }
 
-.mini-chart
-{
-  display: inline-block;
-  border-style: none;
-  width: 250px;
-}
-
-.mini-chart.chart-pressure
+.border-pressure
 {
   border-color: var(--dark-pressure-color) !important;
 }
 
-.mini-chart.chart-temperature
+.border-temperature
 {
   border-color: var(--dark-temperature-color) !important;
 }
 
-.mini-chart.chart-humidity
+.border-humidity
 {
   border-color: var(--dark-humidity-color) !important;
 }
 
-/*noinspection CssInvalidPseudoSelector*/
-.mini-chart ::deep canvas
+.mini-chart
 {
-  border-style: solid;
-  border-width: 1px;
-  border-color: inherit;
-}
-
-/*noinspection CssInvalidPseudoSelector*/
-.loading ::deep *,
-.failed ::deep *,
-.empty ::deep *
-{
-  display: none;
-  visibility: collapse;
+  display: inline-block;
+  border: 1px solid transparent;
+  width: 250px;
 }
